# starter_project

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
src/: Application.cpp  Application.h  Logging.cpp  Logging.h  Main.cpp  MainLayer.h  Renderer.h  Window.cpp  Window.h
src/Events/: Event.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
src/Layers/: ImGuiLayer.cpp  ImGuiLayer.h  Layer.h  LayerStack.cpp  LayerStack.h  MainLayer.cpp  MainLayer.h
